--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -281,7 +281,7 @@ background-color:#B1D0B3;
       <string/>
      </property>
      <property name="pixmap">
-      <pixmap>../../../Downloads/LL.png</pixmap>
+      <pixmap>../../../Users/Admin/Downloads/LL.png</pixmap>
      </property>
      <property name="scaledContents">
       <bool>true</bool>
@@ -6301,7 +6301,7 @@ QLabel {
             <string/>
            </property>
           </widget>
-          <widget class="QPushButton" name="pushButton_35">
+          <widget class="QPushButton" name="recherche1">
            <property name="geometry">
             <rect>
              <x>750</x>
@@ -6334,9 +6334,9 @@ QLabel {
           <widget class="QComboBox" name="lowHigh">
            <property name="geometry">
             <rect>
-             <x>1060</x>
+             <x>1040</x>
              <y>140</y>
-             <width>181</width>
+             <width>161</width>
              <height>31</height>
             </rect>
            </property>
@@ -6500,7 +6500,7 @@ QLabel {
           <widget class="QPushButton" name="mail">
            <property name="geometry">
             <rect>
-             <x>930</x>
+             <x>880</x>
              <y>140</y>
              <width>81</width>
              <height>31</height>
@@ -7657,6 +7657,89 @@ QLabel {
          </property>
          <property name="text">
           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:700; font-style:italic;&quot;&gt;PATIENT&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="Statistique">
+       <attribute name="title">
+        <string>Statistique</string>
+       </attribute>
+       <widget class="QGroupBox" name="groupBox_28">
+        <property name="geometry">
+         <rect>
+          <x>2</x>
+          <y>0</y>
+          <width>1271</width>
+          <height>631</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color:#D6E7D5;
+
+border-radius : 20px;</string>
+        </property>
+        <property name="title">
+         <string/>
+        </property>
+        <widget class="QLabel" name="PATIENT_5">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>10</y>
+           <width>141</width>
+           <height>61</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">*{
+    color: #6FAF92;
+    font-size: 16px; /* Taille du texte (ajustable) */
+    font-weight: normal; /* Style du texte */
+}</string>
+         </property>
+         <property name="text">
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:700; font-style:italic;&quot;&gt;PATIENT&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
+        </widget>
+        <widget class="QWidget" name="widget_2" native="true">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>70</y>
+           <width>1251</width>
+           <height>501</height>
+          </rect>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="stat">
+         <property name="geometry">
+          <rect>
+           <x>480</x>
+           <y>30</y>
+           <width>131</width>
+           <height>31</height>
+          </rect>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">*{
+    background-color: #6FAF92;  /* Medium green button */
+    border: 1px solid #388E3C;  /* Darker green border */
+    border-radius: 5px;
+    color: #FFFFFF;             /* White text for contrast */
+    padding: 5px;
+}
+
+*:hover {
+    background-color: #81C784;  /* Lighter green on hover */
+}</string>
+         </property>
+         <property name="text">
+          <string>stat</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>../../../Users/Admin/Downloads/analysis.png</normaloff>../../../Users/Admin/Downloads/analysis.png</iconset>
          </property>
         </widget>
        </widget>
