crud,pdf,trie,recherche,stat,mailling et QR code

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6334,9 +6334,9 @@ QLabel {
           <widget class="QComboBox" name="lowHigh">
            <property name="geometry">
             <rect>
-             <x>1040</x>
+             <x>1110</x>
              <y>140</y>
-             <width>161</width>
+             <width>131</width>
              <height>31</height>
             </rect>
            </property>
@@ -6527,6 +6527,36 @@ QLabel {
              <normaloff>../../../Users/Admin/Downloads/report.png</normaloff>../../../Users/Admin/Downloads/report.png</iconset>
            </property>
           </widget>
+          <widget class="QPushButton" name="QR">
+           <property name="geometry">
+            <rect>
+             <x>990</x>
+             <y>140</y>
+             <width>101</width>
+             <height>31</height>
+            </rect>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">*{
+    background-color: #6FAF92;  /* Medium green button */
+    border: 1px solid #388E3C;  /* Darker green border */
+    border-radius: 5px;
+    color: #FFFFFF;             /* White text for contrast */
+    padding: 5px;
+}
+
+*:hover {
+    background-color: #81C784;  /* Lighter green on hover */
+}</string>
+           </property>
+           <property name="text">
+            <string>QR CODE</string>
+           </property>
+           <property name="icon">
+            <iconset>
+             <normaloff>../../../Users/Admin/Downloads/qr-code_14021437.png</normaloff>../../../Users/Admin/Downloads/qr-code_14021437.png</iconset>
+           </property>
+          </widget>
          </widget>
         </item>
        </layout>
@@ -6589,7 +6619,7 @@ QLabel {
           <property name="geometry">
            <rect>
             <x>400</x>
-            <y>40</y>
+            <y>30</y>
             <width>171</width>
             <height>41</height>
            </rect>
@@ -6766,7 +6796,7 @@ QLabel {
           <property name="geometry">
            <rect>
             <x>400</x>
-            <y>160</y>
+            <y>140</y>
             <width>171</width>
             <height>41</height>
            </rect>
@@ -6788,7 +6818,7 @@ QLabel {
           <property name="geometry">
            <rect>
             <x>400</x>
-            <y>210</y>
+            <y>200</y>
             <width>171</width>
             <height>41</height>
            </rect>
@@ -6832,7 +6862,7 @@ QLabel {
           <property name="geometry">
            <rect>
             <x>400</x>
-            <y>100</y>
+            <y>90</y>
             <width>171</width>
             <height>41</height>
            </rect>
